# pico-matrix-controller

./: Cargo.toml  README.org  dev.sh  flake.nix  prod.sh
backend-embedded/: Cargo.toml
backend-pc/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml
frontend/src/: main.rs
matrix-state/: Cargo.toml
matrix-state/src/: lib.rs
message-derive/: Cargo.toml
message-derive/src/: lib.rs
server-embedded/: Cargo.toml  build.rs
server-embedded/src/: dhcp_server.rs  main.rs  network.rs  web.rs
server-test/: Cargo.toml
server-test/src/: main.rs
